# csci702_projects

./: .gitignore  README.MD
project1/: Makefile  main.cpp  task7.cpp
project2/: Makefile  cube_quat  cube_quat.cpp  imu_cube_vis.cpp  madgwick.cpp
project2/host/: Makefile  pc_receiver  pc_receiver.cpp  task3_uml.puml
project2/rpi/: Makefile  pi_sender.cpp  task1.cpp  task3_description.md
project3/qt_imu_client/: CMakeLists.txt  glwidget.cpp  glwidget.h  imuworker.cpp  imuworker.h  main.cpp  mainwindow.cpp  mainwindow.h
project3/qt_simple_app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
project3/rpi/: Makefile  task3_server.cpp  task4_threaded_server.cpp
project3/rpi/task1_webserver/: imu_cgi.cpp  install.sh  nginx_imu.conf
project4/: CLAUDE.md  Makefile  encoder.cpp  joystick.cpp  motor_l298n_pigpio.cpp  pd_control.cpp
